# npl

./: .flake8  .gitignore  .readthedocs.yaml  CITATION.cff  README.md  abcsetup.cfg  pyproject.toml  requierements.txt  requirements.txt  setup.cfg  setup.py  test-npl.py
.github/workflows/: publish.yml  test.yml
data/: new_data.json  test.ipynb  top_params.json
docs/: conf.py  examples.rst  index.rst  installation.rst  modules.rst  npl.calculators.rst  npl.core.rst  npl.descriptors.rst  npl.monte_carlo.ensembles.rst  npl.monte_carlo.rst  npl.optimization.basin_hopping.rst  npl.optimization.genetic_algoritm.rst  npl.optimization.local_optimization.rst  npl.optimization.monte_carlo.ensembles.rst  npl.optimization.monte_carlo.rst  npl.optimization.rst  npl.rst  npl.utils.rst  requirements.txt  train_top.rst
docs/doctrees/: environment.pickle  index.doctree
docs/examples/: global_optimization.rst  (+3 more)
examples/: Ag140O30.out  Ag140O30.traj  Ag140O30.xyz  Ag140O42.out  Ag140O42.traj  Ag140O42.xyz  Ag140O5.out  Ag140O5.traj  GO_tab_data.ipynb  adsorbate_optimization.ipynb  bayesian_rr_calculator.pkl  chemical_ordering_global_opt.ipynb  global_optimization.ipynb  loading_pretrain_top.ipynb  local_optimization_example.ipynb  montecarlo_optimization.ipynb  multimemetal_optimization.ipynb  new_montecarlo.ipynb  surrogate_energy_model.ipynb  test.ipynb  train_TOP.ipynb  train_top.ipynb
notebooks/: adjacent_matrix.ipynb  site_recongnition.ipynb  test_calculators.ipynb  test_code.ipynb
npl/: __init__.py  logging_config.py
test/: test.ipynb  test.py  training_test.py
(+69 files in other folders)
