[build-system]
requires = ["setuptools>=42", "wheel", "pybind11~=2.6.1",]
build-backend = "setuptools.build_meta"

#[project]
#name = "npl"
#version = '0.0.1'
#authors = [
#    {name = "Riccardo Farris", email = "rfarris@ub.edu"},
#]
#requires-python = ">=3.8"
#dynamic = ["version", "description"]
#dependencies = ['ase >= 3.22.1','numpy >= 1.22.0','scikit_learn >= 1.0.2','scipy >= 1.7.3']

